--- a/task5/report/zprava.tex
+++ b/task5/report/zprava.tex
@@ -12,6 +12,10 @@
 \addtokomafont{labelinglabel}{\sffamily}
 \hypersetup{colorlinks=true,linkcolor=blue,urlcolor=blue}
 
+
+
+
+
 \begin{document}
 \clubpenalty 10000
 \widowpenalty 10000
@@ -74,37 +78,103 @@ Turnaj je prováděn vybíráním počtu náhodných indexů, kde je z jedninců
 \end{labeling}
 
 \section{Testovací data}\label{kap:data}
-Testovací data k problému nebyly poskytnuty globálně, ale bylo nutné si nějaké testovací instance vytvořit nebo sehnat. Já jsem se při řešení problému omezil na instance problému 3-SAT, které lze bez vah jednotlivých problému, jednoduše sehnat na stránkách prot SAT Competition nebo SAT Race. První sadu instancí jsem použil instance ze \href{https://www.cs.ubc.ca/~hoos/SATLIB/benchm.html}{SATLIB}, kde mám k dispozici instance s počtem proměných od 91 do 175. Poměr klauzulí ku počtu proměných je přibližně 4.3, tedy tyto instance jsou nejtěžšími pro 3-SAT. Dále mám k dispozici instance 3-SAT náhodně generované (pomocí \href{https://toughsat.appspot.com/}{generátoru}) s počtem proměných 50, ale s rozsahem poměru klauzulí a proměných od 3 do 8. Všechny instance jsou ve formátu DIMACS. 
+Testovací data k problému nebyly poskytnuty globálně, ale bylo nutné si nějaké testovací instance vytvořit nebo sehnat. Já jsem se při řešení problému omezil na instance problému 3-SAT, které lze bez vah jednotlivých problému, jednoduše sehnat na stránkách prot SAT Competition nebo SAT Race. První sadu (v experimentech označovanou jako D1) instancí jsem použil instance ze \href{https://www.cs.ubc.ca/~hoos/SATLIB/benchm.html}{SATLIB}, kde mám k dispozici instance s počtem proměných od 91 do 175. Poměr klauzulí ku počtu proměných je přibližně 4.3, tedy tyto instance jsou nejtěžšími pro 3-SAT. Dále mám k dispozici instance 3-SAT náhodně generované (pomocí \href{https://toughsat.appspot.com/}{generátoru}) s počtem proměných 50, ale s rozsahem poměru klauzulí a proměných od 3 do 8 (v experimentech označovanou jako D2). Všechny instance jsou ve formátu DIMACS. 
 
-Pro splnění zadání bylo nutné dogenerovat váhy k jednotlivým proměným. Pro zachování formátu a možnosti využití těchto instancí i pro SAT řešiče, jsem váhy uložil jako komentář~\textit{"c~weights~2~\dots"}, aby nebyl porušen formát souboru. Váhy jsem generoval náhodně z rozsahu 1-50 jako celá čísla. 
+Pro splnění zadání bylo nutné dogenerovat váhy k jednotlivým proměným. Pro zachování for\-mátu a možnosti využití těchto instancí i pro SAT řešiče, jsem váhy uložil jako komentář~\textit{"c~weights~2~\dots"}, aby nebyl porušen formát souboru. Váhy jsem generoval náhodně z rozsahu 1-50 jako celá čísla. 
 
 \section{Testovací platforma}\label{kap:platform}
-Řešení samotného genetického algoritmu bylo vytvořeno v Cythonu a přeloženo do jazyka C. Experimenty jsem prováděl ve virtuálním prostředí s operačním systémem Debian 9. Procesor Intel Core i5 5200U @ 2.20GHz a testy byly prováděné v režimu jednoho vlákna.
+Řešení samotného genetického algoritmu bylo vytvořeno v Cythonu a přeloženo do jazyka C. Experimenty jsem prováděl ve virtuálním prostředí s operačním systémem Debian 9. Procesor Intel Core i5 5200U @ 2.20GHz a testy byly prováděné v režimu jednoho vlákna, při minimálním zatížení počítače dalšími programy.
 \subsection{Cíle}\label{kap:cil}
 
-V genetickém algoritmu lze měnit jeho paramentry, cílem tedy je odzkoušet heuristiku v řešení Vážené splnitelnosti SAT problému v závislosti na těchto parametrech. Cílem je prozkoumat nastavení genetického algoritmu tak, aby algoritmus byl schopen řešit co nejvíce problému nebo řešit problémy s co nejmenší chybou.
+V genetickém algoritmu lze měnit jeho paramentry, cílem tedy je odzkoušet heuristiku v řešení vážené splnitelnosti SAT problému v závislosti na těchto parametrech. Cílem je prozkoumat nastavení genetického algoritmu tak, aby algoritmus byl schopen řešit co nejvíce problému nebo řešit problémy s co nejmenší chybou.
 
+\begin{figure}
+	\centering
+    \begin{minipage}[c]{0.48\textwidth}
+        \centering\includegraphics[width=\textwidth]{img/runC.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.48\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/runS.pdf} 
+    \end{minipage}
+    \\
+    \begin{minipage}[c]{0.48\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/runG.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.48\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/runW.pdf} 
+    \end{minipage}
+   \caption{Na obrázcích jsou grafy generované při běhu algoritmu. Vlevo nahoře je graf, kde je v rámci generací zobrazen počet splněných klauzulí. Pod ním je stejný graf pouze s rozdílem, že zde jsou zobrazeny hodnoty fitness funkce. Graf vpravo nahoře ukazuje počet řešení v populaci v rámci generačního cyklu. Na grafu pod ním je vývoj maximální dosažené váhy proměných v rámci generačního cyklu.}\label{fig:normalrun}
+\end{figure} 
 
 \section{Experimenty}\label{kap:experiments}
 
-V experimetech prozkoumám závislost genetického algoritmu na parametrech jako jsou počet generací, velikost populace, hodnota mutace, pravděpodobnost křížení a selekční tlak. Vždy se pokusím testovat jeden parametr a ostatní zafixuji, aby bylo možné měřit vliv tohoto parametru na průběh řešení. 
+\begin{figure}
+	\centering
+    \begin{minipage}[c]{0.325\textwidth}
+        \centering\includegraphics[width=\textwidth]{img/badC.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.325\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/badS.pdf} 
+    \end{minipage}
+    \begin{minipage}[c]{0.325\textwidth}
+        \centering \includegraphics[width=\textwidth]{img/badW.pdf} 
+    \end{minipage}
+    \\
+   \caption{Na obrázcích je ukázán ne úplně ideální průběh. Na levém obrázku počet splněných klauzulí, uprostřed počet řešení v populaci a na pravém váha nejlepšího řešení.}\label{fig:badrun}
+\end{figure} 
 
-\subsection{Závislost na počtu generací}
-no asi na tom něco bude...
- 
 
+V experimetech prozkoumám závislost genetického algoritmu na parametrech jako jsou počet generací, velikost populace, hodnota mutace, pravděpodobnost křížení a selekční tlak. Vždy se pokusím testovat jeden parametr a ostatní zafixuji, aby bylo možné měřit vliv tohoto parametru na průběh řešení. Zafixované hodnoty mají hodnotu z ukázky nastavení níže a pro hodnotu mutace je hodnota 0.05.
+
+V rámci běhu algoritmu program vytváří grafy o běhu a jsou zaznámenávány statistiky do csv souboru. Na obrázku \ref{fig:normalrun} jsem uvedl příklad normálního a úspěšněho běhu iterativní heuristiky. Je také vidět, že hodnota fitness funkce a počet splněných klauzulí spolu velice korelují, což bylo předpokládáno již při sestavení vzorce pro výpočet fitness funkce. Proto v následujících experimentech budu vždy uvádět jen jeden z těchto dvou grafů, protože jsou téměř totožné. Grafy na obrázku \ref{fig:normalrun} jsou vygenerovány s nastaveními níže, kde mutace je 0.05, tedy první hodnota ze seznamu. Konfigurační souborem ukaázaným níže, lze tedy řídit chování programu a algoritmu a tento soubor je nutné zadat při spuštění.
+
+V experimentech jsem tedy měřil především dosaženou hodnotu fitness funkce a procento spl\-něných klauzulí. Na těchto hodnotách budu také především testovat chování algoitmu na změnu parametrů za cílem nalezení nastavení, které bude při řešení problému nejúspěšnější. 
+
+\begin{labeling}{alligator}
+\item[RUN:] 
+\begin{labeling}{alligator}
+\item[] 
+\item[out:] ./out/t
+\item[in:] ./instCtV
+\end{labeling}
+\item[GA:]
+\begin{labeling}{alligator}
+\item[] 
+\item[generationcount:] 200
+\item[generationsize:] 200
+\item[mutation:] 0.05 0.21 0.05
+\item[crossover:] 0.7
+\item[selection:] 0.1
+\item[selection\_add:] 2
+\item[elitism:] 1
+\item[fitness:] 0.99
+\end{labeling}  
+\end{labeling}
+\pagestyle{plain}
+
+Na obrázku \ref{fig:normalrun} je ještě patrný vysoký koeficient ve fitness funkci, kde je hlavní podmínkou splnění klauzule. Jak je patrné, tak při naležení řešení poklesla hodnota řešení, protože paramentr hodnoty nebyl tak upřednostňvaný a hodnota se opět zlepšovala v dalších generací, kdy už v řešení byly přítomna řešení. Toto je velice markantní na obrázku \ref{fig:badrun}, takto také dopadaly běhy algoritmu. Při běhu bylo nalezeno řešení, hodnota řešení prudce klesla, ale již se ji nepodařilo vylepšit. Bohužel z důvodu neznalosti optimálního řešení nedokáži posoudit, zdali náhodou toto nebylo optimální řešení, pro splnění problému SAT.
 
 \begin{figure}
 	\centering
     \begin{minipage}[c]{0.42\textwidth}
-        \centering\includegraphics[width=\textwidth]{img/1c.pdf} 
+        \centering\includegraphics[width=\textwidth]{img/time_gen_cnt_sz.pdf} 
     \end{minipage}
     \begin{minipage}[c]{0.42\textwidth}
-        \centering \includegraphics[width=\textwidth]{img/1c.pdf} 
+        \centering \includegraphics[width=\textwidth]{img/time_n_var_cla.pdf} 
     \end{minipage}
     \\
-   \caption{Na levém grafu je závislost relativní chyby na počáteční teplotě. Na pravém grafu je závislost výpočetního času na počáteční teplotě}\label{fig:GZNT}
+   \caption{Na grech jsou vidět časové náročnosti. Na levém grafu je zobrazena časová náročnost na velikosti populace a počtu generací. Na pravém grafu je zobrazena časová závislos na počtu proměných a počtu klauzulí v problému.}\label{fig:time}
 \end{figure} 
+\subsection{Závislosti některý parametrů instancí a algoritmu na výpočetním čase}
+
+
+
+
+
+
+\subsection{Závislost na počtu generací}
+no asi na tom něco bude...
+
 
 \begin{figure}
 	\centering
